# genai-security-demo

./: .gitignore  CLAUDE.md  FINAL_SUMMARY.md  LICENSE  Makefile  OBS-MAIN.md  OBS-MASTER-ARCHITECT.md  README.md  example_unified_tools.py  pyproject.toml  run_e2e_tests.py
.github/workflows/: linter-and-tests.yml  linter.yml  pylint.yml
images/: rag_for_devs.excalidraw
notebooks/: 01_multimodal_security.ipynb
src/: chatbot_console.py  chatbot_webui.py  prompts.py
src/chatbot/: input_guardrail_bot.py  output_guardrail_bot.py  rag.py  secure_bot.py  system_prompt_guardrail_bot.py  tools_injection_bot.py  unprotected_bot.py  vulnerable_bot.py
src/config/: anthropic_provider.py  base_provider.py  bedrock_converse_provider.py  bedrock_provider.py  groq_provider.py  llm_config.py  logger_config.py  openai_provider.py  security_config.py  token_usage.py  tool_adapters.py  tool_system.py
src/data/: database_info.txt  jorge.txt
src/tools/: __init__.py  vulnerable_log_tool.py  vulnerable_tools.py
src/ui/: basic_ui.py  basic_ui_prompt_leak.py  common.py  direct_injection_ui.py  input_guardrail_ui.py  output_guardrail_ui.py  prompt_injection_demo_ui.py  rag_ui.py  tools_injection_bot_ui.py  vulnerable_bot_ui.py
tests/e2e_tests/: test_web_ui.py
tests/integration_tests/: test_anthropic_provider.py  test_bedrock_converse_provider_tools.py  test_bedrock_provider.py  test_groq_provider.py  test_groq_provider_tools.py  test_openai_provider.py  test_openai_provider_tools.py  test_secure_bot.py  test_token_usage_tracking.py
tests/unit_tests/: test_bedrock_converse_provider_structure.py  test_input_guardrails_bot.py  test_output_guardrails_bot.py  test_secure_bot.py  test_unprotected_bot.py
